Fixed edit bio div overflow issues and filled out the guidelines in the guidelines page.

--- a/Software_Development_Project_Ideas/styles.css
+++ b/Software_Development_Project_Ideas/styles.css
@@ -53,6 +53,8 @@ body {
     background-color: #fff7f9;
     text-align: center;
     transition: 0.2s;
+    height:1;
+    width:1;
 }
 
 .nav-item:hover {
@@ -187,7 +189,7 @@ body {
 
 .bio-placeholder {
     width: 100%;
-    height: 120px;
+    height: 100%;
     border: 3px solid #e5c7cc;
     border-radius: 12px;
     background-color: #fff7f9;
@@ -421,7 +423,7 @@ body {
     align-items: flex-start;
     justify-content: flex-start;
     word-break: break-word;
-    padding: 20px;
+    padding: 40px;
     color: #999;
     font-size: 1rem;
 }
@@ -438,8 +440,6 @@ body {
     text-align: center;
     width: 100%;
     color: #555;
-    margin-bottom: 20px;
-    line-height: 1.6;
     flex: 1;
 }
 
@@ -453,7 +453,6 @@ body {
 }
 
 .guidelines-placeholder ul li {
-    margin-bottom: 8px;
     flex: 1;
     padding:5px;
 }
